# src/users/users.controller.js
@@ -1,6 +1,8 @@
 const userService = require('./users.service');
 const authService = require('../auth/auth.service');
+const mongoose = require('mongoose');
 
+// create
 const createUserController = async (req, res) => {
   const { username, name, email, password, avatar } = req.body;
 
@@ -43,6 +45,7 @@ const createUserController = async (req, res) => {
 
   res.send({ token });
 };
+// all
 const findAllUserController = async (req, res) => {
   const users = await userService.findAllUserService();
 
@@ -54,5 +57,71 @@ const findAllUserController = async (req, res) => {
 
   res.send(users);
 };
+// all characters
+const findAllCharacterController = async (req, res) => {
+  const character = await userService.findAllCharacterService();
 
-module.exports = { createUserController, findAllUserController };
+  if (character.lenght == 0) {
+    return res.status(404).send({ message: 'Não existe nenhuma personagem cadastrada' });
+  }
+  res.send(character);
+};
+
+// by id
+const findByIdCharacterController = async (req, res) => {
+  const idParam = req.params.id;
+
+  const characters = await userService.findByIdCharacterService(idParam);
+  if (!characters) {
+    return res.status(404).send({ message: 'Character não encontrada!' });
+  }
+
+  res.send(characters);
+};
+// By name
+const findByNameCharacterController = async (req, res) => {
+  const idParam = req.params.characterName;
+
+  const characters = await userService.findByNameCharacterService(idParam);
+  if (!characters) {
+    return res.status(404).send({ message: 'Character não encontrada!' });
+  }
+
+  res.send(characters);
+};
+
+// CREATE
+const createCharacterController = async (req, res) => {
+  const characters = req.body;
+
+  const newCharacter = await userService.createCharacterService(characters);
+  res.status(201).send(newCharacter);
+};
+
+// update
+const updateCharacterController = async (req, res) => {
+  const idParam = req.params.id;
+
+  const characterEdit = req.body;
+
+  const updateCharacter = await userService.updateCharacterService(idParam, characterEdit);
+  res.send(updateCharacter);
+};
+// delete
+const deleteCharacterController = async (req, res) => {
+  const idParam = req.params.id;
+  await userService.deleteCharacterService(idParam);
+
+  res.send({ message: 'Character deletada com sucesso!' });
+};
+
+module.exports = {
+  createUserController,
+  findAllUserController,
+  findAllCharacterController,
+  findByIdCharacterController,
+  findByNameCharacterController,
+  createCharacterController,
+  updateCharacterController,
+  deleteCharacterController,
+};
